--- a/style.css
+++ b/style.css
@@ -2,9 +2,20 @@ body
 {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  height: 100%;
+  
 }
 #particles-js{
     height: 100%;
-    background: #262626;
+   
+    background: #1a222c;
 }
+h1{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 70px;
+    color:white;
+}
+h2{
+    font-size: 30px;
+}
+
