--- a/style.css
+++ b/style.css
@@ -2,13 +2,15 @@ body
 {
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 450px;
   
 }
 #particles-js{
     height: 100%;
    
     background: #1a222c;
+    background-size: cover;
+    z-index:0;
 }
 h1{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -21,4 +23,7 @@ h2{
 separator{
   margin: 0;
   padding: 0;
+}
+#heading{
+    padding:0;padding-left:20px;margin:0;color:white;font-size:36px
 }
