--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body
 {
   margin: 0;
   padding: 0;
+  z-index: 0;
   height: 450px;
   
 }
@@ -10,20 +11,77 @@ body
    
     background: #1a222c;
     background-size: cover;
-    z-index:0;
+   
+    display: block;
+    width: 100%;
+    height: 100%;
+   
+    top: 0;
+    left: 0
+    
+   
 }
+
 h1{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 70px;
     color:white;
+    z-index:1;
+    
+   
 }
 h2{
     font-size: 30px;
+       z-index:1;
+    
+    
 }
 separator{
   margin: 0;
   padding: 0;
 }
 #heading{
-    padding:0;padding-left:20px;margin:0;color:white;font-size:36px
+    padding:0;
+    padding-left:20px;
+    margin:0;
+    color:white;
+    font-size:36px;
+    z-index:1;
+    
+   
+}
+
+.body-particles{
+    position: absolute;
+    top: 0;
+    left: 0;
+    
+  }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    padding-left: 450px ;
+    overflow: hidden;
+    background-color: #1a222c;
+}
+
+  li {
+    float: left;
+
+}
+i{
+    size: 40px;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #000000 white;
 }
