--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1{
    
 }
 h2{
-    font-size: 30px;
+    font-size: 35px;
        z-index:1;
     
     
@@ -45,7 +45,7 @@ separator{
     padding-left:20px;
     margin:0;
     color:white;
-    font-size:36px;
+    font-size:50px;
     z-index:1;
     
    
@@ -61,7 +61,8 @@ separator{
     list-style-type: none;
     margin: 0;
     padding: 0;
-    padding-left: 450px ;
+    padding-left: 35% ;
+    padding-right: 35% ;
     overflow: hidden;
     background-color: #1a222c;
 }
@@ -71,7 +72,7 @@ separator{
 
 }
 i{
-    size: 40px;
+    size: 80px;
 }
 
 li a {
