--- a/style.css
+++ b/style.css
@@ -45,8 +45,9 @@ separator{
     padding-left:20px;
     margin:0;
     color:white;
-    font-size:50px;
+    font-size:80px;
     z-index:1;
+    font-weight: 455px;
     
    
 }
