--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,12 +7,12 @@
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="icons-header">
-        <a aria-label="Send email" href="mailto:{{site.email}}"><i class="icon fa fa-envelope"></i></a>
+        <a aria-label="Send email" href="mailto:{{site.ankursinghal.dev@gmail.com}}"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Twitter" target="_blank" href="https://twitter.com/{{site.twitter_therovermind}}"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a aria-label="My Facebook" target="_blank" href="https://plus.google.com/{{site.gplus_username}}/posts"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
-        <a aria-label="My Github" target="_blank" href="https://github.com/{{site.github_username}}"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-        <a aria-label="My Gitlab" target="_blank" href="https://gitlab.com/{{site.gitlab_username}}"><i class="icon fa fa-gitlab" aria-hidden="true"></i></a>
-        
+        <a aria-label="My Facebook" target="_blank" href="https://fb.com/{{site.gplus_username}}/posts"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
+        <a aria-label="My Github" target="_blank" href="https://github.com/{{site.github_therovermind}}"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/{{site.therovermind}}/posts"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
+       
        
 
    
