--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,10 +8,10 @@
       </h1>
       <div class="icons-header">
         <a aria-label="Send email" href="mailto:{{site.ankursinghal.dev@gmail.com}}"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Twitter" target="_blank" href="https://twitter.com/{{site.twitter_therovermind}}"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a aria-label="My Facebook" target="_blank" href="https://fb.com/{{site.gplus_username}}/posts"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
-        <a aria-label="My Github" target="_blank" href="https://github.com/{{site.github_therovermind}}"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-        <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/{{site.therovermind}}/posts"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
+        <a aria-label="My Twitter" target="_blank" href="https://twitter.com/therovermind"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
+        <a aria-label="My Facebook" target="_blank" href="https://fb.com/therovermind"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
+        <a aria-label="My Github" target="_blank" href="https://github.com/therovermind"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/therovermind"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
        
        
 
